# pill_iot

./: .gitignore  Pill_Detection_Status_Report.docx  README.md  bom.py  bore_audit.py  carousel.py  des.f3d  generate_report.js  hero_dispenser.py  index_wheel.py  optical_chamber.py  routing_chute.py  trapdoor.py  yesyes.step  ~$ll_Detection_Status_Report.docx
detection/: ble_server.py  capture.py  database.py  demo_server.py  model.py  pi_state.json  pipeline.py  preprocess.py  pyproject.toml  requirements.txt  test_full_pipeline.py  train.py  viewer.html  warmup_profiles.py
detection/data/profiles/: prescription.json
detection/memory/: project_context.md
detection/models/: pill_embedding.onnx
output/: _test_assy.step  _test_carousel_full.step  _test_hero_full.step  _test_nested_assy.step  _test_wp_export.step  agitator_wheel.step  bom.csv  bom.txt  button.step  camera.step  camera_arm.step  camera_mount.step  carousel_assembly.step  carousel_base.step  cartridge.step  center_hub.step  chamber_ceiling.step  chamber_shell.step  dispense_gate.step  dispense_gate_servo_mount.step  dispense_release_gate.step  dispense_release_gate_servo_mount.step  dispense_sweep_containment_band.step  dispense_sweep_port_seal.step  dispense_sweep_pusher.step  dispense_sweep_pusher_deployed.step  dispense_sweep_rail.step  dispense_sweep_servo_mount.step  display_panel.step  drop_cone.step  enclosure.step  enclosure_bottom.step  enclosure_middle.step  enclosure_top.step  guide_funnel.step  hatch_final.step  hero_dispenser_assembly.step  hero_full_assembly.fbx  hero_full_assembly.glb  (+37 more)
